# clutchtimealerts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: dev-build.yml  docker-on-release.yml  release-workflow.yml
src/clutchtimealerts/: __main__.py  clutch_alerts.py  config_parser.py  db_utils.py  format_utils.py  notification_collector.py
src/clutchtimealerts/notifications/: base.py  discord.py
src/clutchtimealerts/scraper/: live_scores.py
src/clutchtimebot/: __main__.py  clutch_alerts.py  config_parser.py  notification_collector.py
src/clutchtimebot/notifications/: base.py  groupme.py  slack.py
tests/: test_config_parser.py  test_notification_collector.py
